// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hotspot renders snapshot 1`] = `
<div>
  <div
    class="css-1jv2bij css-14680sq"
    id="main-container"
  />
</div>
`;

exports[`hotspot renders snapshot with rationale 1`] = `
<div>
  <div
    class="css-1jv2bij css-14680sq"
    id="main-container"
  >
    <div>
      <div>
        <span
          class="css-1thq00z"
        >
          Show Rationale
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`hotspot renders snapshot with teacherInstructions 1`] = `
<div>
  <div
    class="css-1jv2bij css-14680sq"
    id="main-container"
  >
    <div
      class="css-1qm1lh"
    >
      <div>
        <span
          class="css-1thq00z"
        >
          Show Teacher Instructions
        </span>
      </div>
    </div>
  </div>
</div>
`;
